Fixed cofirm page not showing new email and full name

--- a/lms/static/sass/views/_account-settings.scss
+++ b/lms/static/sass/views/_account-settings.scss
@@ -207,6 +207,10 @@
                     #u-field-value-username {
                         padding-top: ($baseline/2);
                     }
+
+                    #u-field-value-name {
+                        width: 100%
+                    }
                 }
 
                 .u-field-order {
